[package]
name = "zeta4g-driver"
version = "0.1.0"
edition = "2021"
authors = ["Kangyou Choi <zeta9044@gmail.com>"]
description = "Rust driver for Zeta4G graph database with Bolt protocol support"
license = "MIT"
repository = "https://github.com/zeta9044/zeta4g-driver"
keywords = ["graph", "database", "bolt", "driver", "cypher"]
categories = ["database"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full", "net", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Utilities
async-trait = "0.1"
parking_lot = "0.12"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
